2008-06-25  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/Makefile.am: Do not put libs in
	INCLUDES.

2008-06-25  Michael Biebl  <mbiebl@gmail.com>

	* filters/application/vnd.*: Use odt2txt instead of o3totxt. o3read
	has been deprecated and superseded by odt2txt. See also
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=477311
	* README: Add odt2txt to the list of recommended dpendencies.

	* configure.ac
	* src/Makefile.am
	* src/text-filters/*:
	Remove inlined sources of o3totxt. They are no longer used.

2008-06-24  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/modules/Makefile.am: Use "Tracker" as the
	domain (not NULL) for modules.

2008-06-24  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-log.c: (log_output),
	(tracker_log_handler), (tracker_log_init): Actually make sure we
	log to disk, we were just printing to screen.
	
	* src/tracker-indexer/Makefile.am: Change the domain for the
	indexer to just "Tracker", the libraries are this too, makes sense
	to stay consistent.

2008-06-24  Ivan Frade  <ivan.frade@nokia.com>

	* tests/libtracker-db/Makefile.am
	* tests/libtracker-db/run-test-in-tmp-dir.sh
	* tests/libtracker-db/tracker-db-manager-common.c
	* tests/libtracker-db/tracker-db-manager-common.h: Common
	functions to -attach and -unattach tests
	
	* tests/libtracker-db/tracker-db-manager-test-unattach.c: new
	test to tracker_db_manager with no attach_all

	* tests/libtracker-db/tracker-db-manager-test.c: renamed to -attach.c
	* tests/libtracker-db/tracker-db-manager-test-attach.c: 

2008-06-24  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/dummy.c: Update API, also add more
	thorough comments about what should be going on in each method.

2008-06-24  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/Makefile.am:
	* src/tracker-indexer/modules/evolution.c: Module for Evolution,
	initially it supports local and IMAP mailboxes. It's still missing