@@ -2,7 +2,7 @@ include $(top_srcdir)/Makefile.decl
 
 noinst_PROGRAMS = $(TEST_PROGS)
 
-TEST_PROGS += tracker-db-manager-unattach tracker-db-manager-attach
+TEST_PROGS += tracker-db-manager-unattach tracker-db-manager-attach tracker-db-manager-custom
 
 INCLUDES = 				\
 	-g 				\
@@ -41,6 +41,23 @@ tracker_db_manager_unattach_SOURCES = 		\
 	tracker-db-manager-common.h
 
 tracker_db_manager_attach_LDADD =					\
+	$(top_builddir)/src/libtracker-db/libtracker-db.la 		\
+	$(top_builddir)/src/libtracker-common/libtracker-common.la 	\
+	$(top_builddir)/tests/common/libtracker-testcommon.la 		\
+        $(top_builddir)/src/xdgmime/libxdgmime.la                       \
+	$(SQLITE3_LIBS)							\
+	$(QDBM_LIBS)							\
+	$(GMODULE_LIBS)							\
+	$(GTHREAD_LIBS)							\
+	$(GLIB2_LIBS)							\
+	-lz
+
+tracker_db_manager_custom_SOURCES = 		\
+	tracker-db-manager-test-custom.c 	\
+	tracker-db-manager-common.c		\
+	tracker-db-manager-common.h
+
+tracker_db_manager_custom_LDADD =					\
 	$(top_builddir)/src/libtracker-db/libtracker-db.la 		\
 	$(top_builddir)/src/libtracker-common/libtracker-common.la 	\
 	$(top_builddir)/tests/common/libtracker-testcommon.la 		\
