@@ -4,10 +4,18 @@ gboolean
 test_assert_query_run (TrackerDB db, const gchar *query)
 {
         TrackerDBInterface *iface;
-        TrackerDBResultSet *result_set;
-        GError *error = NULL;
         
         iface = tracker_db_manager_get_db_interface (db);
+
+        return test_assert_query_run_on_iface (iface, query);
+
+}
+
+gboolean
+test_assert_query_run_on_iface (TrackerDBInterface *iface, const gchar *query)
+{
+        TrackerDBResultSet *result_set;
+        GError *error = NULL;
 
         result_set = tracker_db_interface_execute_query (iface, 
                                                          &error, 
@@ -21,4 +29,3 @@ test_assert_query_run (TrackerDB db, const gchar *query)
 
         return TRUE;
 }
-
