@@ -5,5 +5,6 @@
 #include <libtracker-db/tracker-db-manager.h>
 
 gboolean test_assert_query_run (TrackerDB db, const gchar *query);
+gboolean test_assert_query_run_on_iface (TrackerDBInterface *iface, const gchar *query);
 
 #endif
